--- a/projecthub.html
+++ b/projecthub.html
@@ -11,11 +11,16 @@
 
     <nav>
         <div class="logo">PROJECT HUB.</div>
-        <ul>
+        <ul class="nav-menu">
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#custom-project">Need a Developer?</a></li>
         </ul>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </nav>
 
     <header class="hero">
